// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Col 1`] = `Array []`;

exports[`Mock render - default - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="default_input"
            title="default"
          >
            default
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - inline and long extra default size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - inline and long extra default size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":8}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="inline and long extra default size_input"
            title="Lorem ipsum dolor sit amet
"
          >
            Lorem ipsum dolor sit amet

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "inline and long extra default size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - inline and long extra large size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - inline and long extra large size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":8}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":40},null]}"
            htmlFor="inline and long extra large size_input"
            title="Lorem ipsum dolor sit amet
"
          >
            Lorem ipsum dolor sit amet

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "inline and long extra large size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - inline and long extra small size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - inline and long extra small size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":0}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":24},null]}"
            htmlFor="inline and long extra small size_input"
            title="Lorem ipsum dolor sit amet
"
          >
            Lorem ipsum dolor sit amet

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":-4},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "inline and long extra small size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.align: left - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.align: left - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.align: left_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.align: left",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.align: right - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.align: right - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.align: right_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.align: right",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.colon: false - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.colon: false - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="ant-form-item-no-colon {\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.colon: false_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.colon: false",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.colon: true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.colon: true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.colon: true_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.colon: true",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.disabled: true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        false,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.disabled: true",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.extra: Extra long_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.extra: Extra long",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long with inline = true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long with inline = true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":8}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.extra: Extra long with inline = true_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "properties.extra: Extra long with inline = true",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long with inline = true, size = large - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long with inline = true, size = large - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":8}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":40},null]}"
            htmlFor="properties.extra: Extra long with inline = true, size = large_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "properties.extra: Extra long with inline = true, size = large",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long with inline = true, size = small - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long with inline = true, size = small - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":0}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":24},null]}"
            htmlFor="properties.extra: Extra long with inline = true, size = small_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":-4},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "properties.extra: Extra long with inline = true, size = small",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra long with inline true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra long with inline true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":8}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.extra: Extra long with inline true_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "properties.extra: Extra long with inline true",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extra: Extra text - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extra: Extra text - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.extra: Extra text_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Extra text
          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.extra: Extra text",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extraStyle: border 1px purple - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.extraStyle: border 1px purple - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.extraStyle: border 1px purple_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},{\\"border\\":\\"1px solid purple\\"}]}"
          >
            Extra text
          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.extraStyle: border 1px purple",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.feedbackStyle: border 1px blue - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.feedbackStyle: border 1px blue - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.feedbackStyle: border 1px blue_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            The extra content
          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.feedbackStyle: border 1px blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inline: true - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.inline: true - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":false,\\"marginBottom\\":8}}"
          flex="0 1 auto"
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.inline: true_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          flex="1 1 auto"
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\",\\"marginBottom\\":0}}",
      "id": "properties.inline: true",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.span: 2 - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.span: 2 - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          md={
            Object {
              "span": 2,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.span: 2_input"
            title="This is the long label title wrapped by short span"
          >
            This is the long label title wrapped by short span
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 22,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.span: 2",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.span: 2 with long work title - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.span: 2 with long work title - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          md={
            Object {
              "span": 2,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.span: 2 with long work title_input"
            title="Thisisthelonglabeltitlea"
          >
            Thisisthelonglabeltitlea
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 22,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.span: 2 with long work title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.title - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.title_input"
            title="Label title"
          >
            Label title
          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title long - value[0] - Col 1`] = `Array []`;

exports[`Mock render - properties.title long - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="properties.title long_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "properties.title long",
    },
    Object {},
  ],
]
`;

exports[`Mock render - span, align right and long extra for default size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - span, align right and long extra for default size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          md={
            Object {
              "span": 8,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="span, align right and long extra for default size_input"
            title="Lorem
"
          >
            Lorem

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 16,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "span, align right and long extra for default size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - span, align right and long extra for large size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - span, align right and long extra for large size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          md={
            Object {
              "span": 8,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":40},null]}"
            htmlFor="span, align right and long extra for large size_input"
            title="Lorem
"
          >
            Lorem

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 16,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "span, align right and long extra for large size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - span, align right and long extra for small size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - span, align right and long extra for small size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":0}}"
          md={
            Object {
              "span": 8,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":24},null]}"
            htmlFor="span, align right and long extra for small size_input"
            title="Lorem
"
          >
            Lorem

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 16,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":-4},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "span, align right and long extra for small size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - span, align right, long title and long extra for default size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - span, align right, long title and long extra for default size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          md={
            Object {
              "span": 8,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":32},null]}"
            htmlFor="span, align right, long title and long extra for default size_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 16,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "span, align right, long title and long extra for default size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - span, align right, long title and long extra for large size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - span, align right, long title and long extra for large size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}}"
          md={
            Object {
              "span": 8,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":40},null]}"
            htmlFor="span, align right, long title and long extra for large size_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 16,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "span, align right, long title and long extra for large size",
    },
    Object {},
  ],
]
`;

exports[`Mock render - span, align right, long title and long extra for small size - value[0] - Col 1`] = `Array []`;

exports[`Mock render - span, align right, long title and long extra for small size - value[0] - Row 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          className="ant-form-item-label {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":0}}"
          md={
            Object {
              "span": 8,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <label
            className="{\\"style\\":[{\\"height\\":\\"fit-content !important\\",\\"minHeight\\":24},null]}"
            htmlFor="span, align right, long title and long extra for small size_input"
            title="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </label>
        </mockConstructor>,
        <mockConstructor
          className="ant-form-item-control"
          md={
            Object {
              "span": 16,
            }
          }
          sm={
            Object {
              "span": 24,
            }
          }
          xs={
            Object {
              "span": 24,
            }
          }
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                style={
                  Object {
                    "border": "1px solid red",
                    "padding": 10,
                  }
                }
              >
                content
              </div>
            </div>
          </div>
          <ForwardRef
            motionAppear={true}
            motionName="show-help"
            removeOnLeave={true}
            visible={false}
          >
            [Function]
          </ForwardRef>
          <div
            className="ant-form-item-explain ant-form-item-extra {\\"style\\":[{\\"marginTop\\":-4},null]}"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod

          </div>
        </mockConstructor>,
      ],
      "className": "ant-form-item {\\"style\\":{\\"marginBottom\\":0}}",
      "id": "span, align right, long title and long extra for small size",
    },
    Object {},
  ],
]
`;
